--- a/app/views/shared/_head.html.erb
+++ b/app/views/shared/_head.html.erb
@@ -13,7 +13,7 @@
   <meta charset="UTF-8">
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
-  <%= favicon_link_tag external_image('favicon.png') %>
+  <%= favicon_link_tag '/openchain.jpeg' %>
   <%= render partial: 'shared/image_links_meta' %>
   <%= stylesheet_pack_tag 'application', media: 'all' %>
   <%= javascript_pack_tag 'application' %>
