change text & icon

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -8,7 +8,7 @@
         <% end %>
     </div>
     <br>
-    Member of blockchain center
+    MEMBER OF BLOCKCHAIN CENTER
     <br>
     <span style="font-size: 90%;">
       Thailand | India | Dubai | USA | Swisszeland | Vietnam | Germany | Singapore | Maritius | Africa Kingdom
