--- a/app/views/home/_chain.html.erb
+++ b/app/views/home/_chain.html.erb
@@ -14,7 +14,7 @@
 <script>
 
     $( document ).ready(function() {
-
+        console.log('load network_icon chain');
         var query = new widgets.query(`<%= query.html_safe %>`);
 
         new widgets.chartByTime('#<%= chain[:tag] %>', query, 'chain.transactions', {
