update text footer

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -15,7 +15,7 @@
     MEMBER OF BLOCKCHAIN CENTER
     <br>
     <span style="font-size: 90%;">
-      Thailand | India | Dubai | USA | Swisszeland | Vietnam | Germany | Singapore | Maritius | Africa Kingdom
+      Thailand | India | Dubai | USA | Switzerland | Vietnam | Germany | Singapore | Maritius | Africa Kingdom
     </span>
   </div>
 </footer>
