--- a/app/views/cse30/network/_blocks_table.html.erb
+++ b/app/views/cse30/network/_blocks_table.html.erb
@@ -3,7 +3,7 @@
     <div class="card">
       <div class="card-header"><%= t('widgets.headers.latest_blocks') %></div>
       <div class="card-body">
-        <div class="text-center widgets-loading dark" id="loading"><div role="status" class="spinner-border text-info"><span class="sr-only"><%= t('loading') %></span></div></div>
+        <div class="text-center widgets-loading" id="loading"><div role="status" class="spinner-border text-info"><span class="sr-only"><%= t('loading') %></span></div></div>
         <div class="widgets-blur" id="container-data">
           <div class="table-responsive" id="table-data" style="display: none;">
             <table class="table table-striped table-hover table-sm widgets-table ">
@@ -29,18 +29,9 @@
 
 <script>
   var currentPage = 1;
-    function toogleLoading(state) {
-      if (state) {
-        $('#container-data').addClass('widgets-blur');
-        $('#loading').show();
-      } else {
-        $('#container-data').removeClass('widgets-blur');
-        $('#loading').hide();
-      }
-    }
 
     function loadDataTable() {
-      queryCseScan('https://csescan.com/api/v1/blocks', `pagination.page=${currentPage}&pagination.limit=10`)
+      queryCseScan('blocks', `pagination.page=${currentPage}&pagination.limit=10`)
       .done(function(data) {
         $('#table-data').show();
         console.log('query data', data);
@@ -62,7 +53,6 @@
     }
 
     $(document).ready(function() {
-      console.log('onload block table');
 
       $('#more-link').on('click', function() {
         toogleLoading(true);
