--- a/app/views/cse30/network/_transactions_table.html.erb
+++ b/app/views/cse30/network/_transactions_table.html.erb
@@ -3,76 +3,121 @@
     <div class="card">
       <div class="card-header"><%= t('widgets.headers.latest_transactions') %></div>
       <div class="card-body">
-        <div id="latest_transactions"><%= t('loading') %></div>
+        <div class="text-center widgets-loading" id="loading"><div role="status" class="spinner-border text-info"><span class="sr-only"><%= t('loading') %></span></div></div>
+        <div class="widgets-blur" id="container-data">
+          <div class="table-responsive" id="table-data" style="display: none;">
+            <table class="table table-striped table-hover table-sm widgets-table ">
+                <thead>
+                  <tr>
+                      <th class=""><%= t('widgets.titles.timestamp') %></th>
+                      <th class=""><%= t('widgets.titles.block') %></th>
+                      <th class=""><%= t('widgets.titles.hash') %></th>
+                      <th class="text-right"><%= t('widgets.titles.fee') %></th>
+                  </tr>
+                </thead>
+                <tbody>
+                </tbody>
+            </table>
+            <div class="more-text"><div class="more-text-link"><a class="more-link" id="more-link">Show more...</a></div></div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
 </div>
 
 <script>
+  var currentPage = 1;
 
+    function loadDataTable() {
+      queryCseScan('transactions', `pagination.page=${currentPage}&pagination.limit=10`)
+      .done(function(data) {
+        $('#table-data').show();
+        console.log('query data', data);
+        tableBody = $("table tbody");
+        data.listings.forEach(function(item) {
+          tableBody.append(`<tr>
+            <td class=""><span>${m(Number(item.createdAt+'000')).format('YYYY-MM-DD HH:mm:ss')}</span></td>
+            <td class=""><span><a href="/cse30/block/${item.blockHeight}">${item.blockHeight}</a></span></td>
+            <td class=""><span><a href="/cse30/tx/${item.hash}">${item.hash}</a></span></td>
+            <td class="text-right "><span>${formatNumber(Number(item.feeNetwork)/Math.pow(10,8))}</span></td>
+          </tr>`)
+        });
+        toogleLoading(false);
+        if (Number(data.pagination.pages) < Number(data.pagination.page)) {
+          $('.more-text').hide();
+        }
+      });
+    }
     $( document ).ready(function() {
 
+      $('#more-link').on('click', function() {
+        toogleLoading(true);
+        currentPage++;
+        loadDataTable();
+      });
 
-        var query = new widgets.query(`
-                        query (
-                                $limit: Int!,
-                                $offset: Int!
-                                $from: ISO8601DateTime,
-                                $till: ISO8601DateTime){
-                    tron{
-                      transactions(options:{desc: "block.height", limit: $limit, offset: $offset},
-                        date: {since: $from till: $till }
-                        ) {
+        loadDataTable();
 
-                          block {
-                            timestamp {
-                              time (format: "%Y-%m-%d %H:%M:%S")
-                            }
-                            height
-                          }
+        // var query = new widgets.query(`
+        //                 query (
+        //                         $limit: Int!,
+        //                         $offset: Int!
+        //                         $from: ISO8601DateTime,
+        //                         $till: ISO8601DateTime){
+        //             tron{
+        //               transactions(options:{desc: "block.height", limit: $limit, offset: $offset},
+        //                 date: {since: $from till: $till }
+        //                 ) {
 
-                          hash
-                          fee
+        //                   block {
+        //                     timestamp {
+        //                       time (format: "%Y-%m-%d %H:%M:%S")
+        //                     }
+        //                     height
+        //                   }
 
-                      }
-                    }
-                  }`);
+        //                   hash
+        //                   fee
 
-        new widgets.table('#latest_transactions', query, 'tron.transactions', {
-            title: '<%= t('widgets.headers.latest_transactions') %>',
-            dataOptions: [
-                {
-                    title: '<%= t('widgets.titles.timestamp') %>',
-                    type: 'string',
-                    path: 'block.timestamp.time',
-                    style: 'width: 170px;'
-                },
-                {
-                    title: '<%= t('widgets.titles.block') %>',
-                    type: 'string',
-                    path: 'block.height',
-                    urlCallbackName: 'block_path',
-                    style: 'width: 80px;'
-                },
-                {
-                    title: '<%= t('widgets.titles.hash') %>',
-                    type: 'string-ellipsis',
-                    path: 'hash',
-                    urlCallbackName: 'transaction_path'
-                },
+        //               }
+        //             }
+        //           }`);
 
-                {
-                    title: '<%= t('widgets.titles.fee') %>, <%= @network[:currency] %>',
-                    type: 'amount',
-                    path: 'fee',
-                    style: 'width: 110px;'
-                },
-            ]
-        });
+        // new widgets.table('#latest_transactions', query, 'tron.transactions', {
+        //     title: '<%= t('widgets.headers.latest_transactions') %>',
+        //     dataOptions: [
+        //         {
+        //             title: '<%= t('widgets.titles.timestamp') %>',
+        //             type: 'string',
+        //             path: 'block.timestamp.time',
+        //             style: 'width: 170px;'
+        //         },
+        //         {
+        //             title: '<%= t('widgets.titles.block') %>',
+        //             type: 'string',
+        //             path: 'block.height',
+        //             urlCallbackName: 'block_path',
+        //             style: 'width: 80px;'
+        //         },
+        //         {
+        //             title: '<%= t('widgets.titles.hash') %>',
+        //             type: 'string-ellipsis',
+        //             path: 'hash',
+        //             urlCallbackName: 'transaction_path'
+        //         },
 
-        queryWithTimeRange(rr, query, <%= limited_date_range_limit(@from, @till).join(',').html_safe %>,{
-        });
+        //         {
+        //             title: '<%= t('widgets.titles.fee') %>, <%= @network[:currency] %>',
+        //             type: 'amount',
+        //             path: 'fee',
+        //             style: 'width: 110px;'
+        //         },
+        //     ]
+        // });
+
+        // queryWithTimeRange(rr, query, <%= limited_date_range_limit(@from, @till).join(',').html_safe %>,{
+        // });
 
     });
 
