--- a/app/views/cse30/block/_tabs.html.erb
+++ b/app/views/cse30/block/_tabs.html.erb
@@ -1,3 +1,5 @@
 <%= render partial: 'shared/tabs', locals: {
-    tabs: ['show','transactions','transfers','calls','contracts']
+    tabs: ['show','transactions','transfers',
+    # 'calls','contracts'
+    ]
 } %>
