--- a/app/views/cse30/network/_transactions_table.html.erb
+++ b/app/views/cse30/network/_transactions_table.html.erb
@@ -9,10 +9,11 @@
             <table class="table table-striped table-hover table-sm widgets-table ">
                 <thead>
                   <tr>
-                      <th class=""><%= t('widgets.titles.timestamp') %></th>
-                      <th class=""><%= t('widgets.titles.block') %></th>
-                      <th class=""><%= t('widgets.titles.hash') %></th>
-                      <th class="text-right"><%= t('widgets.titles.fee') %></th>
+                    <th class=""><%= t('widgets.titles.timestamp') %></th>
+                    <th class=""><%= t('widgets.titles.block') %></th>
+                    <th class=""><%= t('widgets.titles.tx_sender') %></th>
+                    <th class=""><%= t('widgets.titles.hash') %></th>
+                    <th class="text-right"><%= t('widgets.titles.fee') %></th>
                   </tr>
                 </thead>
                 <tbody>
@@ -29,35 +30,36 @@
 <script>
   var currentPage = 1;
 
-    function loadDataTable() {
-      queryCseScan('transactions', `pagination.page=${currentPage}&pagination.limit=10`)
-      .done(function(data) {
-        $('#table-data').show();
-        console.log('query data', data);
-        tableBody = $("table tbody");
-        data.listings.forEach(function(item) {
-          tableBody.append(`<tr>
-            <td class=""><span>${m(Number(item.createdAt+'000')).format('YYYY-MM-DD HH:mm:ss')}</span></td>
-            <td class=""><span><a href="/cse30/block/${item.blockHeight}">${item.blockHeight}</a></span></td>
-            <td class=""><span><a href="/cse30/tx/${item.hash}">${item.hash}</a></span></td>
-            <td class="text-right "><span>${formatNumber(Number(item.feeNetwork)/Math.pow(10,8))}</span></td>
-          </tr>`)
-        });
-        toogleLoading(false);
-        if (Number(data.pagination.pages) < Number(data.pagination.page)) {
-          $('.more-text').hide();
-        }
+  function loadDataTable() {
+    queryCseScan('transactions', `pagination.page=${currentPage}&pagination.limit=10`)
+    .done(function(data) {
+      $('#table-data').show();
+      console.log('query data', data);
+      tableBody = $("table tbody");
+      data.listings.forEach(function(item) {
+        tableBody.append(`<tr>
+          <td class=""><span>${m(Number(item.createdAt+'000')).format('YYYY-MM-DD HH:mm:ss')}</span></td>
+          <td class=""><span><a href="/cse30/block/${item.blockHeight}">${item.blockHeight}</a></span></td>
+          <td class=""><span><a href="/cse30/address/${item.from}">${item.from}</a></span></td>
+          <td class=""><span><a href="/cse30/tx/${item.hash}">${item.hash}</a></span></td>
+          <td class="text-right "><span>${formatNumber(Number(item.feeNetwork)/Math.pow(10,8))}</span></td>
+        </tr>`)
       });
-    }
-    $( document ).ready(function() {
+      toogleLoading(false);
+      if (Number(data.pagination.pages) < Number(data.pagination.page)) {
+        $('.more-text').hide();
+      }
+    });
+  }
+  $( document ).ready(function() {
 
-      $('#more-link').on('click', function() {
-        toogleLoading(true);
-        currentPage++;
-        loadDataTable();
-      });
+    $('#more-link').on('click', function() {
+      toogleLoading(true);
+      currentPage++;
+      loadDataTable();
+    });
 
-        loadDataTable();
+      loadDataTable();
 
         // var query = new widgets.query(`
         //                 query (
