--- a/app/views/cse30/sitemap/index.xml.erb
+++ b/app/views/cse30/sitemap/index.xml.erb
@@ -50,7 +50,7 @@
                                                                   address: token.currency.address,
                                                                   only_path: false) } %>
     <% else %>
-          <%= render partial: 'sitemaps/url', locals: {url: url_for(controller: "#{@network[:family]}/trc10token", action: 'show',
+          <%= render partial: 'sitemaps/url', locals: {url: url_for(controller: "#{@network[:family]}/token", action: 'show',
                                                                   blockchain: @network[:network], network: @network,
                                                                   address: token.currency.token_id,
                                                                   only_path: false) } %>
