--- a/app/views/cse30/block/_transactions_table.html.erb
+++ b/app/views/cse30/block/_transactions_table.html.erb
@@ -3,65 +3,121 @@
     <div class="card">
       <div class="card-header"><%= t('widgets.headers.transactions') %></div>
       <div class="card-body">
-        <div id="latest_transactions"><%= t('loading') %></div>
+        <div class="text-center widgets-loading" id="loading"><div role="status" class="spinner-border text-info"><span class="sr-only"><%= t('loading') %></span></div></div>
+        <div class="widgets-blur" id="container-data">
+          <div class="table-responsive" id="table-data" style="display: none;">
+            <table class="table table-striped table-hover table-sm widgets-table ">
+                <thead>
+                  <tr>
+                    <th class=""><%= t('widgets.titles.timestamp') %></th>
+                    <th class=""><%= t('widgets.titles.hash') %></th>
+                    <th class="">Status</th>
+                    <th class=""><%= t('widgets.titles.tx_sender') %></th>
+                    <th class=""><%= t('widgets.titles.receiver') %></th>
+                    <th class=""><%= t('widgets.titles.amount') %></th>
+                    <th class="text-right"><%= t('widgets.titles.fee') %></th>
+                  </tr>
+                </thead>
+                <tbody>
+                </tbody>
+            </table>
+            <div class="more-text"><div class="more-text-link"><a class="more-link" id="more-link">Show more...</a></div></div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
 </div>
 
 <script>
-
+  var currentPage = 1;
+  function loadDataTable() {
+    queryCseScan('transactions', `filters.method=NORMAL&filters.blockHashOrHeight=<%= @height %>&pagination.page=${currentPage}&pagination.limit=5`)
+    .then(function(data) {
+      $('#table-data').show();
+      console.log('query data', data);
+      tableBody = $("table tbody");
+      data.listings.forEach(function(item) {
+        tableBody.append(`<tr>
+          <td class=""><span>${m(Number(item.createdAt+'000')).format('YYYY-MM-DD HH:mm:ss')}</span></td>
+          <td class="ellipsis"><span><a href="/cse30/tx/${item.hash}">${item.hash}</a></span></td>
+          <td class=""><span>${item.status}</span></td>
+          <td class="ellipsis"><span><a href="/cse30/address/${item.from}">${item.from}</a></span></td>
+          <td class="ellipsis"><span><a href="/cse30/address/${item.to}">${item.to}</a></span></td>
+          <td class="text-right "><span>${formatNumber(Number(item.amount)/Math.pow(10, 8))}</span></td>
+          <td class="text-right "><span>${formatNumber(Number(item.feeNetwork)/Math.pow(10, 8))}</span></td>
+        </tr>`)
+      });
+      toogleLoading(false);
+      if (Number(data.pagination.pages) <= Number(data.pagination.page)) {
+        $('.more-text').hide();
+      }
+    })
+    .catch(function(err) {
+      console.log('catch err', err);
+      toogleLoading(false);
+      $('#table-data').html('No data');
+      $('.more-text').hide();
+    });
+  }
     $( document ).ready(function() {
+      $('#more-link').on('click', function() {
+        toogleLoading(true);
+        currentPage++;
+        loadDataTable();
+      });
+
+        loadDataTable();
 
 
-        var query = new widgets.query(`
-                        query (
-                                $limit: Int!,
-                                $offset: Int!
-                                $date: ISO8601DateTime,
-                                $height: Int){
-                    tron{
-                      transactions(options:{asc: "index", limit: $limit, offset: $offset},
-                        date: {is: $date } height: {is: $height}
-                        ) {
+        // var query = new widgets.query(`
+        //                 query (
+        //                         $limit: Int!,
+        //                         $offset: Int!
+        //                         $date: ISO8601DateTime,
+        //                         $height: Int){
+        //             tron{
+        //               transactions(options:{asc: "index", limit: $limit, offset: $offset},
+        //                 date: {is: $date } height: {is: $height}
+        //                 ) {
 
-                          index
-                          hash
-                          fee
+        //                   index
+        //                   hash
+        //                   fee
 
-                      }
-                    }
-                  }`);
+        //               }
+        //             }
+        //           }`);
 
-        new widgets.table('#latest_transactions', query, 'tron.transactions', {
-            title: '<%= t('widgets.headers.latest_transactions') %>',
-            dataOptions: [
+        // new widgets.table('#latest_transactions', query, 'tron.transactions', {
+        //     title: '<%= t('widgets.headers.latest_transactions') %>',
+        //     dataOptions: [
 
-                {
-                    title: '<%= t('widgets.titles.transaction_index') %>',
-                    path: 'index',
-                    style: 'width: 80px;'
-                },
-                {
-                    title: '<%= t('widgets.titles.hash') %>',
-                    type: 'string-ellipsis',
-                    path: 'hash',
-                    urlCallbackName: 'transaction_path'
-                },
+        //         {
+        //             title: '<%= t('widgets.titles.transaction_index') %>',
+        //             path: 'index',
+        //             style: 'width: 80px;'
+        //         },
+        //         {
+        //             title: '<%= t('widgets.titles.hash') %>',
+        //             type: 'string-ellipsis',
+        //             path: 'hash',
+        //             urlCallbackName: 'transaction_path'
+        //         },
 
-                {
-                    title: '<%= t('widgets.titles.fee') %>, <%= @network[:currency] %>',
-                    type: 'amount',
-                    path: 'fee',
-                    style: 'width: 110px;'
-                },
-            ]
-        });
+        //         {
+        //             title: '<%= t('widgets.titles.fee') %>, <%= @network[:currency] %>',
+        //             type: 'amount',
+        //             path: 'fee',
+        //             style: 'width: 110px;'
+        //         },
+        //     ]
+        // });
 
 
-        query.request({
-            height: <%= @height %>, date: '<%= @block_date %>'
-        });
+        // query.request({
+        //     height: <%= @height %>, date: '<%= @block_date %>'
+        // });
 
 
     });
