fix search all to cse30

--- a/app/views/cse30/block/_block_info.html.erb
+++ b/app/views/cse30/block/_block_info.html.erb
@@ -58,6 +58,10 @@
           <td class="ellipsis "><span>${data.block.nonce}</span></td>
         </tr>`);
       toogleLoading(false);
+    })
+    .catch(function() {
+      toogleLoading(false);
+      $('#container-data').html('No data');
     });
   }
 
