--- a/app/views/cse30/network/_query_transactions.text.erb
+++ b/app/views/cse30/network/_query_transactions.text.erb
@@ -1,5 +1,5 @@
 query ($dateFormat: String!, $from: ISO8601DateTime, $till: ISO8601DateTime){
-  chain: tron{
+  chain: conflux{
     transactions(options:{asc: "date.month"}, date: {since: $from, till: $till }, height: {gt: 0}) {
       date{
         month: date(format: $dateFormat)
