--- a/app/views/cse30/token/_holder_table.html.erb
+++ b/app/views/cse30/token/_holder_table.html.erb
@@ -9,13 +9,8 @@
             <table class="table table-striped table-hover table-sm widgets-table ">
                 <thead>
                   <tr>
-                    <th class=""><%= t('widgets.titles.timestamp') %></th>
-                    <th class=""><%= t('widgets.titles.hash') %></th>
-                    <th class="">Status</th>
-                    <th class=""><%= t('widgets.titles.tx_sender') %></th>
-                    <th class=""><%= t('widgets.titles.receiver') %></th>
-                    <th class=""><%= t('widgets.titles.amount') %></th>
-                    <th class="text-right"><%= t('widgets.titles.fee') %></th>
+                    <th class=""><%= t('widgets.titles.address') %></th>
+                    <th class="text-right"><%= t('widgets.titles.amount') %></th>
                   </tr>
                 </thead>
                 <tbody>
@@ -33,20 +28,15 @@
   var currentPage = 1;
 
   function loadDataTable() {
-    queryCseScan('transactions', `filters.method=INITIAL_TOKEN&filters.method=TRANSFER_TOKEN&filters.address=<%= @address %>&pagination.page=${currentPage}&pagination.limit=10`)
+    queryCseScan('wallets', `wallets=<%= @token %>&pagination.page=${currentPage}&pagination.limit=10`)
     .then(function(data) {
       $('#table-data').show();
       console.log('query data', data);
       tableBody = $("table tbody");
       data.listings.forEach(function(item) {
         tableBody.append(`<tr>
-          <td class=""><span>${m(Number(item.createdAt+'000')).format('YYYY-MM-DD HH:mm:ss')}</span></td>
-          <td class="ellipsis"><span><a href="/cse30/tx/${item.hash}">${item.hash}</a></span></td>
-          <td class=""><span>${item.status}</span></td>
-          <td class="ellipsis"><span><a href="/cse30/address/${item.from}">${item.from}</a></span></td>
-          <td class="ellipsis"><span><a href="/cse30/address/${item.data.payload.to}">${item.data.payload.to}</a></span></td>
-          <td class="text-right "><span>${numberWithCommas(formatNumber(Number(item.data.payload.amount)/Math.pow(10, item.token.decimals)))} ${item.token.symbol}</span></td>
-          <td class="text-right "><span>${numberWithCommas(formatNumber(Number(item.data.payload.feeToken)/Math.pow(10, item.token.decimals)))} ${item.token.symbol}</span></td>
+          <td class="ellipsis"><span><a href="/cse30/address/${item.address}">${item.address}</a></span></td>
+          <td class="text-right "><span>${numberWithCommas(formatNumber(Number(item.free)/Math.pow(10, item.decimals)))}</span></td>
         </tr>`)
       });
       toogleLoading(false);
